cncProd/force-app/main/default/objects/Forms_Controller__c/Forms_Controller__c.object-meta.xml
<CustomObject>
    <label>Forms Controller</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Forms Controller Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Controllers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>