cncProd/force-app/main/default/objects/Forms_Controller__c/fields/Associated_Checkbox_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Checkbox_Field_API_Name__c</fullName>
    <description>If document has been generated, the corresponding checkbox will be ticked automatically. May be useful for automation purposes (Eg. Vehicle Delivery Certificate)</description>
    <inlineHelpText>Automatically tick corresponding checkbox field. Leave blank if no checkbox.</inlineHelpText>
    <label>Associated Checkbox Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>