cncProd/force-app/main/default/objects/Forms_Controller__c/fields/Button_Condition_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Button_Condition_Field_API_Name__c</fullName>
    <description>If the field = true, button will appear</description>
    <inlineHelpText>Leave blank if no condition</inlineHelpText>
    <label>Button Condition Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>