cncProd/force-app/main/default/objects/Forms_Controller__c/fields/Form_Body__c.field-meta.xml
<CustomField>
    <fullName>Form_Body__c</fullName>
    <label>Form Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>