cncProd/force-app/main/default/objects/Forms_Controller__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <label>Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>