cncProd/force-app/main/default/objects/Forms_Controller__c/fields/Signature_Placeholder_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Signature_Placeholder_Field_API__c</fullName>
    <description>API Name of the field on target object. This field will be a placeholder field to keep the signature on the target object. The field on the target object have to be Rich Text Area with maximum length</description>
    <inlineHelpText>Targeted field must be Rich Text Area</inlineHelpText>
    <label>Signature Placeholder Field API</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>